# RiskEye

./: CMakeLists.txt  CONTINUOUS_OPTIMIZATION_GUIDE.md  FINAL_HFT_OPTIMIZATION_REPORT.md  LICENSE  Makefile  README.md  a.cpp  build.bat  build_self_operating_demo.bat  build_simple.bat  main.cpp  run.bat  run_continuous_optimization.bat  simple_demo.cpp  version.h.in
ai/: AIPredictor.cpp  AIPredictor.h  AdvancedAIStrategies.h  CMakeLists.txt  ConfigDemo.cpp  ConfigWizard.cpp  GlobalRiskPredictionDemo.cpp  GlobalRiskPredictionModel.cpp  GlobalRiskPredictionModel.h  IntelligentConfigWizard.h  IntelligentDecisionSystem.cpp  IntelligentDecisionSystem.h  MLModelManager.cpp  MLModels.h  Model.cpp  Model.h  NeuromorphicDecision.py  NeuromorphicDecisionInterface.cpp  NeuromorphicDecisionInterface.h  ProfessionalConfigGenerator.cpp  ProfessionalConfigGenerator.h  QuantumInterface.h  README.md  RiskPredictionFactory.h  TensorFlowModel.cpp  TensorFlowModel.h
analysis/: Analysis.h  MarketMicrostructureAnalyzer.cpp  MicrostructureAnalyzer.h  TechnicalIndicators.h
backtest/: BacktestEngine.cpp  BacktestEngine.h  OptimizedBacktestEngine.cpp  OptimizedBacktestEngine.h
cli/: CommandLineInterface.cpp  CommandLineInterface.h
config/: config.json  strategy_params.json
core/: AlertManager.cpp  AlertManager.h  Config.cpp  ConfigOptimizer.h  Configuration.cpp  Configuration.h  EventLoop.cpp  EventLoop.h  FaultDetector.cpp  FaultDetector.h  FaultToleranceManager.cpp  FaultToleranceManager.h  FlowController.h  HardwareTimer.h  LoadBalancer.cpp  LoadBalancer.h  LogAnalyzer.h  Logger.cpp  Logger.h  MemoryManager.cpp  MemoryPool.h  PerformanceAnalyzer.h  SelfOperatingSystem.cpp  SelfOperatingSystem.h  System.cpp  System.h  SystemMonitor.h  TimeManager.cpp  TimeManager.h  TimeSync.h  TimeSyncManager.cpp  Types.h
diagnostics/: AbsoluteUltimate.h  AdvancedFeatures.cpp  AdvancedFeatures.h  CMakeLists.txt  CosmicInnovations.h  DiagnosticCore.cpp  DiagnosticCore.h  DiagnosticDataSource.h  DiagnosticPlugin.h  DiagnosticTool.h  EnhancedDiagnostics.cpp  EnhancedDiagnostics.h  EnterpriseFeatures.h  FINAL_ABSOLUTE_README.md  FINAL_README.md  FinalAdvancedFeatures.h  FuturisticFeatures.h  HardwareMonitorPlugin.cpp  HardwareMonitorPlugin.h  PluginManager.cpp  README.md  RemoteMonitor.cpp  RemoteMonitor.h  SelfOperatingSystemDemo.cpp  SuperDiagnosticSystem.cpp  SuperDiagnosticSystem.h  SystemDiagnostics.cpp  SystemDiagnostics.h  TradingSpecificFeatures.h  ULTIMATE_README.md  VisualizationAndMonitoring.cpp  VisualizationAndMonitoring.h  WorldStrongestSystem.cpp  WorldStrongestSystem.h  comprehensive_demo.cpp  example_usage.cpp  ultimate_demo.cpp
docs/: SelfOperatingSystem.md  advanced_user_guide.md  installation_guide.md  product_description.md  quick_start_guide.md
enhancement/: CMakeLists.txt  EnhancementDemo.cpp  README.md  SimpleEnhancementDemo.cpp  SystemEnhancementPlan.cpp  SystemEnhancementPlan.h
evolution/: CMakeLists.txt  ContinuousOptimization.cpp  ContinuousOptimization.h  ContinuousOptimizationDemo.cpp  EvolutionEngine.cpp  EvolutionEngine.h
execution/: AdvancedOrderExecutor.cpp  AdvancedOrderExecutor.h  ExecutionOptimizer.cpp  ExecutionOptimizer.h  LowLatencyOrderEngine.cpp  LowLatencyOrderEngine.h  Order.h  OrderExecution.cpp  OrderExecution.h  OrderTypes.h  OrderValidator.cpp  OrderValidator.h  SmartOrderRouter.cpp  SmartOrderRouter.h
features/: UltimateFeaturesSystem.h
gui/: MainWindow.cpp  MainWindow.h  WorldStrongestGUI.cpp  WorldStrongestGUI.h
hardware/: AsicAccelerator.cpp  AsicAccelerator.h  AsicDriver.cpp  AsicDriver.h  FpgaAccelerator.cpp  FpgaAccelerator.h  HardwareManager.cpp  HardwareManager.h  HardwareMonitor.h  PhotonicEngine.cpp  PhotonicEngine.h  PhotonicProcessor.cpp  PhotonicProcessor.h  VectorProcessor.cpp  VectorProcessor.h  photonic_order_engine.v
market/: FeatureExtractor.cpp  FeatureExtractor.h  LiquidityEvaluator.cpp  LiquidityEvaluator.h  MarketData.h  MarketDataAggregator.cpp  MarketDataAggregator.h  MarketDataDistributor.cpp  MarketDataDistributor.h  MarketDataSubscriber.cpp  MarketDataSubscriber.h  MarketEnvironmentAnalyzer.cpp  MarketEnvironmentAnalyzer.h  MarketImpactModel.h  MicrostructureAnalyzer.cpp  MicrostructureAnalyzer.h  MultimodalDataFusion.cpp  MultimodalDataFusion.h
monitoring/: MonitorAggregator.h  PerformanceMonitor.cpp
network/: DistributedCommunicator.cpp  DistributedCommunicator.h  KernelBypass.h  LowLatencyNetwork.cpp  LowLatencyNetwork.h  MarketDataFeed.cpp  MarketDataFeed.h  NetworkManager.cpp  NetworkManager.h  OrderRouting.cpp  OrderRouting.h
packaging/: CMakeLists.txt
pattern/: DnnModel.cpp  DnnModel.h  MarketPattern.h  PatternRecognizer.cpp  PatternRecognizer.h
persistence/: DataStore.cpp  DataStore.h
prediction/: ComputeOptimizer.cpp  CrossMarketAnalyzer.cpp  CrossMarketAnalyzer.h  EnhancedPredictor.h
report/: BacktestReport.h
resources/: app.rc.in
risk/: AdaptiveRiskManager.cpp  AdaptiveRiskManager.h  AdvancedRiskManager.cpp  AdvancedRiskManager.h  PositionMonitor.cpp  PositionMonitor.h  QuantumRiskValidator.py  QuantumRiskValidatorInterface.h  RiskAlertSystem.cpp  RiskAnalysis.cpp  RiskAnalysis.h  RiskLimits.h  RiskManager.cpp  RiskManager.h  RiskMetrics.h  WorldStrongestRiskControl.h
speed/: UltimateSpeedSystem.h
strategy/: AdaptiveStrategy.cpp  AdaptiveStrategy.h  AdvancedStrategy.h  ArbitrageSystem.cpp  ArbitrageSystem.h  CustomStrategy.cpp  CustomStrategy.h  ETFArbitrageModel.cpp  FuturesSpotArbitrageModel.cpp  IndexArbitrageModel.cpp  LatencyArbitrageModel.cpp  MarketEnvironmentAnalyzer.cpp  MarketMakingStrategy.cpp  MarketMakingStrategy.h  MeanReversionStrategy.cpp  MeanReversionStrategy.h  OptionArbitrageModel.cpp  StatisticalArbitrageModel.cpp  Strategy.h  StrategyFactory.cpp  StrategyFactory.h  StrategyManager.cpp  StrategyManager.h  StrategyOptimizer.cpp  StrategyOptimizer.h  (+5 more)
tests/: CMakeLists.txt  FaultToleranceManagerTest.cpp  strategy_tests.cpp  test_performance.cpp  test_strategy.cpp  test_system.cpp
tests/core/: SystemTest.cpp
tests/performance/: PerformanceTest.cpp
trading/: README.md  (+3 more)
(+23 files in other folders)
